add models in model.py,use mysql instead of sqlite3

--- a/py_test/py1/templates/py1/djan_test.html
+++ b/py_test/py1/templates/py1/djan_test.html
@@ -5,6 +5,11 @@
     <title></title>
 </head>
 <body>
-I am djan_test.html
+I am pytest.html
+{% if test_content %}
+    {% for content in test_content %}
+        <br>{{content.dname}}--{{content.dage}}
+    {% endfor %}
+{% endif%}
 </body>
 </html>
